# thistlebot

./: .gitignore  README.md  pyproject.toml
scripts/: wpcom_mcp_probe.py
thistlebot/: cli.py
thistlebot/agents/: agent_md_loader.py  config.py  daemon.py  loader.py  memory.py  registry.py  runner.py  skill_loader.py  skill_runner.py  workflow.py
thistlebot/agents/ai-blogger/: AGENT.md
thistlebot/agents/blogger/: agent.json  config.py  ideas.py  manifest.json  prompts.py  workflow.py
thistlebot/agents/blogger2/: agent.json
thistlebot/agents/finance-blogger/: AGENT.md
thistlebot/agents/finance_e2e2/: agent.json
thistlebot/agents/hooks/: base.py
thistlebot/agents/politics-blogger/: AGENT.md
thistlebot/agents/politics_e2e1/: agent.json
thistlebot/api/: app.py  routes.py
thistlebot/cli/: agent.py  chat.py  gateway.py  llm.py  main.py  mcp.py
thistlebot/cli/integrations/: __init__.py  github.py  wordpress.py
thistlebot/config/: defaults.yaml
thistlebot/core/: agent_runtime.py  chat_client.py  gateway.py  gateway_lifecycle.py  meeting_graph.py  session.py
thistlebot/core/tools/: __init__.py  base.py  native.py  policy.py  registry.py
thistlebot/core/workflow/: __init__.py  engine.py  fallback.py  middleware.py  state.py
thistlebot/integrations/: __init__.py  base.py  registry.py
thistlebot/integrations/github/: oauth.py
thistlebot/llm/: __init__.py  base.py  factory.py  ollama_client.py  openai_compatible_client.py
thistlebot/packs/: __init__.py  loader.py
thistlebot/storage/: paths.py  state.py
thistlebot/utils/: io.py  logging.py
(+61 files in other folders)
